# RustKafkaLeanr

./: README.md  docker-compose.yml  index.html
consumer/: Cargo.toml  Dockerfile
producer/: Cargo.toml  Dockerfile  main.rs
websocket/: Cargo.toml  main.rs  test.html
